manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meine-website-ingress
spec:
  ingressClassName: nginx # Verweist auf den NGINX Ingress-Controller
  rules:
    - host: www.multi-application.de # Der Hostname, unter dem die Anwendung erreichbar ist
      http:
        paths:
          - path: /api # oder den genauen Pfad zu deinem Backend
            pathType: Prefix
            backend:
              service:
                name: multi-app-backend # Hier Backend Service einfügen
                port:
                  number: 80 # Hier den Backend Port einfügen
